<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="20dp"
    android:id="@+id/ourproducts"
    android:text="@string/ourproducts"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="@android:color/black"/>

    <ImageView
        android:id="@+id/jack_rr"
        android:layout_width="80dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/ourproducts"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:src="@drawable/rhandy"/>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="200dp"
        android:id="@+id/kelly"
        android:src="@drawable/kelly"
        app:layout_constraintStart_toEndOf="@id/jack_rr"
        app:layout_constraintTop_toBottomOf="@id/ourproducts"
        android:layout_marginTop="45dp"
        android:layout_marginStart="30dp"/>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="200dp"
        android:id="@+id/solo"
        android:src="@drawable/solo"
        app:layout_constraintStart_toEndOf="@id/kelly"
        app:layout_constraintTop_toBottomOf="@id/ourproducts"
        android:layout_marginTop="45dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jack_rr_tv"
        app:layout_constraintTop_toBottomOf="@id/jack_rr"
        app:layout_constraintStart_toStartOf="@id/jack_rr"
        android:layout_marginTop="12dp"
        android:text="@string/jack_rr"
        android:textSize="10sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jack_kelly_tv"
        app:layout_constraintTop_toBottomOf="@id/kelly"
        app:layout_constraintStart_toStartOf="@id/kelly"
        android:layout_marginTop="17dp"
        android:text="@string/jack_kelly"
        android:textSize="10sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jack_solo_tv"
        app:layout_constraintTop_toBottomOf="@id/solo"
        app:layout_constraintStart_toStartOf="@id/solo"
        android:layout_marginTop="12dp"
        android:text="@string/jack_solo"
        android:textSize="10sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jack_kelly_tv"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/rr_des_tv"
        android:text="@string/rr_des"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rr_des_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/kelly_des_tv"
        android:text="@string/kelly_des"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/kelly_des_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/solo_des_tv"
        android:text="@string/solo_des"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:id="@+id/btn_to_main"
        app:layout_constraintTop_toBottomOf="@id/solo_des_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:text="На главную"
        android:background="@color/colorAccent"/>






</androidx.constraintlayout.widget.ConstraintLayout>